handled overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2874,6 +2874,14 @@ b, strong {
   font-size: 16px;
 }
 
+.text-\[40px\] {
+  font-size: 40px;
+}
+
+.text-\[72px\] {
+  font-size: 72px;
+}
+
 .\!font-bold {
   font-weight: 700 !important;
 }
@@ -2908,6 +2916,10 @@ b, strong {
 
 .leading-\[26px\] {
   line-height: 26px;
+}
+
+.leading-\[50px\] {
+  line-height: 50px;
 }
 
 .\!text-primary {
